fix(ui): fix context menu visibility issue

--- a/ui/src/articles/components/ArticleCard.module.css
+++ b/ui/src/articles/components/ArticleCard.module.css
@@ -8,7 +8,7 @@
   border-radius: inherit;
   box-shadow: 0 2px 15px 2px var(--panel-shadow-color);
   color: var(--panel-text-color-alt);
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .content {
@@ -73,6 +73,11 @@
   border: 2px solid var(--button-primary-color);
 }
 
+.illustration {
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+}
+
 .illustration > img {
   align-self: center;
   border-radius: inherit;
@@ -80,8 +85,9 @@
 }
 
 @media (min-width: 767px) {
-  .illustration >  {
-    display: flex;
+  .illustration {
+    display: flex; 
+    border-top-right-radius: initial;
   }
   .illustration > img {
     max-width: 320px;
